10) Auto disable SoftwareFastpath and increase binding threshold for HW_NAT if QoS Enabled..<br>
11) Add hw_nat_bind variable to set binding threshold per second for HW_NAT (1~500 more value = more normal path and load cpu. Default 30).<br>
12) Rework logic for portforward. Auto enable forward direct if ipportfilter disabled.<br>
13) Some fix for dns server select in some situation.<br>
14) icmp service limit fix.<br>
15) pppoe: drop PPPOX_ZOMBIEs in pppoe_flush_dev.<br>
16) ip: ip_options_compile() resilient to NULL skb route.<br>
17) Fix replace pppoe dgw on lease renew.<br>
18) Some webui fixes for Fastnat mode set and QoS.<br>
19) Fix show gateway in wan config after VPN up.<br>
20) Add AP2040Rescan variable allows to scan forcedly a state of an ether after a configuration of radio of the unit in AP mode.<br>
21) Dnsmasq start as nobody for more secure and fix some buggy situation.<br>
22) Add check symbols in admin password and login.<br>
23) Some cleanup and optimize init scripts.<br>
24) init.d now log to syslog.<br>
25) Boot speedup and save memory at first stage.<br>
26) Fix SoftwareFastpath not enable in Complex offload mode. Is regression.<br>

1.7.x
27) Add initial RT3662/RT3883 + RT309x support.<br>
28) Wi-Fi coexistence now disable per default. (variable HT_BSSCoexistence 0/1 need Add WebUI)<br>
29) Add HT_BSSCoexApCntThr variable to install manually a switch-off threshold 40MHz mode wifi. If AP on air > HT_BSSCoexApCntThr.<br>
30) Some init scrips more correct use some variable.

<br><br>
<b>For support see:</b><br>
<a href="http://acorp.ru">acorp.ru - Acorp Electronics Inc.</a><br>
<a href="http://ddixlab.ru">ddixlab.ru - Laboratory of built in systems.
</a><br>
<br><br>
<b>News and changes in Russian:</b><br>
<a href="http://sadnet.ru">sadnet.ru - Development opensource routers firmware</a><br>
<br><br>
<b>Bug report please send sfstudio[at]mail.ru</b>
<br>
<br>
<br>