@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.21.7
-# Thu Apr 28 02:28:39 2011
+# Sat Apr 30 14:54:41 2011
 #
 CONFIG_MIPS=y
 
