@@ -385,7 +385,9 @@
 27) Add initial RT3662/RT3883 + RT309x support.<br>
 28) Wi-Fi coexistence now disable per default. (variable HT_BSSCoexistence 0/1 need Add WebUI)<br>
 29) Add HT_BSSCoexApCntThr variable to install manually a switch-off threshold 40MHz mode wifi. If AP on air > HT_BSSCoexApCntThr.<br>
-30) Some init scrips more correct use some variable.
+30) Some init scrips more correct use some variable.<br>
+31) Do not send multicast and broadcast to PPE. Workaround for work IpTv in some configuration.<br>
+32) Only packet has valid ethernet adress need send to PPE. Need for correct track uncknown sessions.<br>
 
 <br><br>
 <b>For support see:</b><br>
